--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,84 @@
-Package: unicefdata
+Package: unicefDataPackage: unicefDataPackage: unicefdata
+
 Title: Download SDG Indicators from UNICEF Data Warehouse
-Version: 0.1.0
-Authors@R: 
-    person("Joao Pedro", "Azevedo", , 
-           role = c("aut", "cre"), 
-           email = "azevedo.joaopedro@gmail.com"),
-    person("Garen", "Avanesian", , role = "aut")
-Description: A client to fetch SDMX CSV series from UNICEF’s Data Warehouse, 
-  with caching, diagnostics and sanity checks.
-License: MIT + file LICENSE
+
+Version: 0.2.0Title: Download SDG Indicators from UNICEF Data WarehouseTitle: Download SDG Indicators from UNICEF Data Warehouse
+
+Authors@R: c(
+
+    person("Joao Pedro", "Azevedo", Version: 0.2.0Version: 0.1.0
+
+           email = "jazevedo@unicef.org",
+
+           role = c("aut", "cre")),Authors@R: c(Authors@R: 
+
+    person("Garen", "Avanesian", role = "aut"))
+
+Description: A bilingual R and Python client to fetch SDMX CSV series from     person("Joao Pedro", "Azevedo",     person("Joao Pedro", "Azevedo", , 
+
+    UNICEF's Data Warehouse. Features include automatic pagination, caching 
+
+    with memoisation, country name lookups, and comprehensive indicator support            email = "azevedo.joaopedro@gmail.com",           role = c("aut", "cre"), 
+
+    for SDG monitoring (child mortality, nutrition, immunization, education, etc.).
+
+License: MIT + file LICENSE           role = c("aut", "cre")),           email = "azevedo.joaopedro@gmail.com"),
+
 Encoding: UTF-8
+
+LazyData: true    person("Garen", "Avanesian", role = "aut"))    person("Garen", "Avanesian", , role = "aut")
+
 Roxygen: list(markdown = TRUE)
+
+RoxygenNote: 7.2.3Description: A bilingual R and Python client to fetch SDMX CSV series from Description: A client to fetch SDMX CSV series from UNICEF’s Data Warehouse, 
+
 Imports:
-  httr,
-  readr,
-  dplyr,
-  magrittr
-Suggests:
-  testthat
+
+    httr,    UNICEF's Data Warehouse. Features include automatic pagination, caching   with caching, diagnostics and sanity checks.
+
+    readr,
+
+    dplyr,    with memoisation, country name lookups, and comprehensive indicator support License: MIT + file LICENSE
+
+    tibble,
+
+    xml2,    for SDG monitoring (child mortality, nutrition, immunization, education, etc.).Encoding: UTF-8
+
+    memoise,
+
+    countrycode,License: MIT + file LICENSERoxygen: list(markdown = TRUE)
+
+    tools
+
+Suggests:Encoding: UTF-8Imports:
+
+    testthat (>= 3.0.0)
+
+Config/testthat/edition: 3LazyData: true  httr,
+
 URL: https://github.com/unicef-drp/unicefData
-BugReports: https://github.com/unicef-drp/unicefData/issues
+
+BugReports: https://github.com/unicef-drp/unicefData/issuesRoxygen: list(markdown = TRUE)  readr,
+
+
+RoxygenNote: 7.2.3  dplyr,
+
+Imports:  magrittr
+
+    httr,Suggests:
+
+    readr,  testthat
+
+    dplyr,URL: https://github.com/unicef-drp/unicefData
+
+    tibble,BugReports: https://github.com/unicef-drp/unicefData/issues
+
+    xml2,
+    memoise,
+    countrycode,
+    tools
+Suggests:
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+URL: https://github.com/jpazvd/unicefData
+BugReports: https://github.com/jpazvd/unicefData/issues
