Add comprehensive test suites for Python and R packages
Python tests (6/6 pass):
- List Dataflows: 69 dataflows
- Child Mortality (CME_MRY0T4): 45 observations
- Stunting (NT_ANT_HAZ_NE2): 18 observations
- Immunization (IM_DTP3): 45 observations
- Metadata Sync: 69 dataflows, 25 indicators
- Multiple Indicators: 24 observations

R tests (6/6 pass):
- List Dataflows: 68 dataflows
- Child Mortality (CME_MRY0T4): 135 observations (with sex disaggregation)
- Stunting (NT_ANT_HAZ_NE2): 96 observations
- Immunization (IM_DTP3): 45 observations
- Metadata Sync: 69 dataflows, 13 indicators
- Multiple Indicators: 72 observations

Validated: USA 2023 mortality value matches exactly (6.4790) between Python and R

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,12 @@ log/
 data/raw/*
 !data/raw/.gitkeep
 
+# Test output directories (but keep test scripts)
+python/test_output/*.csv
+python/test_output/metadata_test/
+R/test_output/*.csv
+R/test_output/metadata_test/
+
 # OS
 .DS_Store
 Thumbs.db
