--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -47,4 +47,5 @@ jobs:
       - uses: r-lib/actions/check-r-package@v2
         with:
           upload-snapshots: true
-          error-on: '"error"'
+          args: 'c("--no-manual", "--as-cran")'
+          error-on: '"warning"'
