--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,8 +79,13 @@ importFrom(memoise,memoise)
 importFrom(purrr,map)
 importFrom(readr,read_csv)
 importFrom(rlang,"%||%")
+importFrom(stats,na.omit)
+importFrom(stats,setNames)
 importFrom(tibble,tibble)
 importFrom(tools,R_user_dir)
+importFrom(utils,capture.output)
+importFrom(utils,head)
+importFrom(utils,write.csv)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_attr)
 importFrom(xml2,xml_find_all)
