Refactor(tests): Modernize metadata sync scripts
- Renames `regenerate_metadata.ps1`, `regenerate_all_metadata.py`, and `test_metadata_sync.R` to `sync_metadata.ps1`, `sync_metadata.py`, and `sync_metadata_r.R` respectively to reflect the operation performed.
- Introduces a logging system for the Python scripts.
- Adds `tests/logs` to `.gitignore`.
- Adds a dedicated Python metadata sync script `tests/sync_metadata_python.py`.

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,8 @@ Thumbs.db
 python/tests/output/
 R/tests/output/
 tests/metadata/
+tests/logs/
+!tests/logs/.gitkeep
 python/examples/data/
 R/examples/data/
 validation/validation_results.csv
