fix(R): resolve R CMD check warnings and notes
- Add missing globalVariables: 'dist', 'target_year' in apply_circa()
- Remove library() calls from metadata_sync.R and schema_sync.R
- Remove install.packages() calls from config_loader.R and metadata.R
- Update .Rbuildignore to exclude .pytest_cache, *.log files

These fixes address issues causing GitHub Actions R-CMD-check to fail
with 'error-on: warning' setting.

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -59,3 +59,12 @@
 
 # Hidden files (.gitkeep)
 .*\.gitkeep$
+
+# Python artifacts
+^\.pytest_cache$
+
+# Log files and temp outputs
+^check_output\.txt$
+^stata\.log$
+^test_multi_indicator\.log$
+^.*\.log$
