refactor: split copilot-instructions into language-specific context files
- Reorganize 1324-line .github/copilot-instructions.md into focused files
- Add R/.copilot-context.md (94 lines) - R environment, roxygen2 workflow
- Add python/.copilot-context.md (54 lines) - Python venv, pytest
- Add stata/.copilot-context.md (765 lines) - ado-file system, PyStata
- Slim main file to 210 lines with cross-platform overview
- Include updated R documentation files from devtools::document()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(load_shared_indicators)
 export(load_sync_history)
 export(load_sync_summary)
 export(load_vintage)
+export(parse_year)
 export(process_block)
 export(refresh_indicator_cache)
 export(safe_read_csv)
