--- a/.github/workflows/r-scripted-tests.yaml
+++ b/.github/workflows/r-scripted-tests.yaml
@@ -2,15 +2,12 @@ name: R Scripted Tests
 
 on:
   push:
-    branches: [main, master]
-    paths:
-      - 'R/**'
-      - '.github/workflows/r-scripted-tests.yaml'
+    branches:
+      - '**'
   pull_request:
-    branches: [main, master]
-    paths:
-      - 'R/**'
-      - '.github/workflows/r-scripted-tests.yaml'
+    branches:
+      - '**'
+  workflow_dispatch:
 
 jobs:
   r-tests:
