--- a/.github/workflows/r-scripted-tests.yaml
+++ b/.github/workflows/r-scripted-tests.yaml
@@ -17,10 +17,18 @@ jobs:
 
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
+        with:
+          use-public-rspm: true
+
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev
 
       - name: Install R dependencies
         run: |
-          Rscript -e "install.packages(c('httr','xml2','memoise','countrycode','digest','tibble','readr','dplyr','tidyr','purrr','magrittr','jsonlite','yaml'), repos='https://cloud.r-project.org')"
+          Rscript -e "install.packages(c('httr','xml2','memoise','countrycode','digest','tibble','readr','dplyr','tidyr','purrr','magrittr','jsonlite','yaml'), repos='https://cloud.r-project.org', dependencies=TRUE)"
+          Rscript -e "cat('Installed packages:', paste(installed.packages()[,'Package'], collapse=', '))"
 
       - name: Run scripted tests
         run: |
