--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: unicefData
 Title: Download Indicators from UNICEF Data Warehouse
 Version: 1.5.2
+Date: 2026-01-16
 Authors@R: c(
     person("Joao Pedro", "Azevedo", email = "jazevedo@unicef.org", role = c("aut", "cre")),
     person("Garen", "Avanesian", role = "aut"))
@@ -8,7 +9,7 @@ Description: A bilingual R and Python client to fetch SDMX CSV series from
     UNICEF's Data Warehouse. Features include automatic pagination, caching
     with memoisation, country name lookups, metadata versioning (vintages),
     and comprehensive indicator support for SDG monitoring.
-License: MIT + file LICENSE
+License: MIT
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
@@ -28,10 +29,14 @@ Imports:
     purrr,
     rlang,
     digest,
-    tidyr
+    tidyr,
+    data.table
 Suggests:
     testthat (>= 3.0.0),
-    devtools
+    devtools,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
 Config/testthat/edition: 3
 URL: https://github.com/unicef-drp/unicefData
 BugReports: https://github.com/unicef-drp/unicefData/issues
