chore: update gitignore and documentation for v2.0.0
Updates .gitignore to exclude test logs and private
content. Adds a new CHANGELOG.md file and updates
existing documentation with the latest changes and
version 2.0.0.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,unicef_dataflow_schema)
 export(build_indicator_catalog)
 export(clean_unicef_data)
 export(clear_config_cache)
+export(clear_schema_cache)
 export(compare_vintages)
 export(compute_data_hash)
 export(create_data_version)
@@ -26,6 +27,7 @@ export(get_indicators_by_category)
 export(get_indicators_by_dataflow)
 export(get_indicators_by_sdg)
 export(get_metadata_cache)
+export(get_schema_cache_info)
 export(get_sdmx)
 export(get_vintage_path)
 export(list_categories)
