fix(ci): use pak-version devel and upgrade to resolve dependency failures
- Changed pak-version from stable to devel for latest bug fixes
- Added upgrade: TRUE to force fresh dependency installation
- Bumped cache-version to 7 to invalidate corrupted cache
- Updated Python tests to use HVA_PMTCT_MTCT (golden indicator)

Addresses setup-r-dependencies failures on Ubuntu

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -75,8 +75,9 @@ jobs:
         with:
           extra-packages: any::rcmdcheck
           needs: check
-          pak-version: stable
-          cache-version: 6
+          pak-version: devel
+          cache-version: 7
+          upgrade: 'TRUE'
 
       - uses: r-lib/actions/check-r-package@v2
         with:
