ci: add scripts/unpack_fixtures.py to workflow path triggers
Ensures fixture extraction script changes trigger test workflow re-runs.

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -19,6 +19,7 @@ on:
       - 'inst/**'
       - 'tests/**'
       - 'vignettes/**'
+      - 'scripts/unpack_fixtures.py'
       - 'DESCRIPTION'
       - 'NAMESPACE'
       - 'LICENSE'
@@ -32,6 +33,7 @@ on:
       - 'inst/**'
       - 'tests/**'
       - 'vignettes/**'
+      - 'scripts/unpack_fixtures.py'
       - 'DESCRIPTION'
       - 'NAMESPACE'
       - 'LICENSE'
