--- a/.github/workflows/python-tests.yaml
+++ b/.github/workflows/python-tests.yaml
@@ -46,7 +46,12 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Unpack test fixtures
-      run: python scripts/unpack_fixtures.py --force
+      run: |
+        python scripts/unpack_fixtures.py --force
+        echo "--- Verifying fixture extraction ---"
+        ls -la tests/fixtures/ || true
+        ls -la tests/fixtures/deterministic/ || true
+        ls -la tests/fixtures/api_responses/ || true
 
     - name: Install dependencies
       run: |
