--- a/.github/workflows/r-scripted-tests.yaml
+++ b/.github/workflows/r-scripted-tests.yaml
@@ -47,7 +47,12 @@ jobs:
           python-version: '3.11'
 
       - name: Unpack test fixtures
-        run: python scripts/unpack_fixtures.py --force
+        run: |
+          python scripts/unpack_fixtures.py --force
+          echo "--- Verifying fixture extraction ---"
+          ls -la tests/fixtures/ || true
+          ls -la tests/fixtures/deterministic/ || true
+          ls -la tests/fixtures/api_responses/ || true
 
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
