--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -77,6 +77,7 @@ jobs:
           python-version: '3.11'
 
       - name: Unpack test fixtures
+        shell: bash
         run: |
           echo "--- Working directory and ZIP check ---"
           pwd
