--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -79,17 +79,8 @@ jobs:
       - name: Unpack test fixtures
         shell: bash
         run: |
-          echo "--- Working directory and ZIP check ---"
-          pwd
-          ls -la tests/*.zip || echo "No ZIP in tests/"
-          ls -la tests/fixtures.zip || echo "fixtures.zip not found"
-          echo "--- Running unpack script ---"
           python scripts/unpack_fixtures.py --force
-          echo "--- Verifying fixture extraction ---"
-          ls -la tests/fixtures/ || echo "tests/fixtures/ not found"
-          ls -la tests/fixtures/deterministic/ || echo "deterministic/ not found"
-          ls -la tests/fixtures/api_responses/ || echo "api_responses/ not found"
-          test -f tests/fixtures/deterministic/CME_MRY0T4_USA_2020_pinning.csv || echo "CRITICAL: pinning.csv missing"
+          git add -f tests/fixtures/deterministic/ tests/fixtures/api_responses/ tests/fixtures/xml/ tests/fixtures/yaml/
 
       - uses: r-lib/actions/setup-pandoc@v2
 
