sync: Merge pull request #39 from jpazvd/develop
feat(stata): implement discovery caching and cleanup

Synced from: jpazvd/unicefData-dev@0aa270a8643baaf928f5d1b871d9c4ddaf61fc1a

--- a/.gitignore
+++ b/.gitignore
@@ -152,6 +152,8 @@ stata/qa/fixtures/*
 *.fls
 *.out
 *.synctex.gz
+paper/*.pdf
+!paper/*-v[0-9]*.pdf
 
 # Paper sjlogs - keep only cleaned .log.tex files
 paper/sjlogs/*.tex
